--- a/AOportfolio.css
+++ b/AOportfolio.css
@@ -3,3 +3,21 @@ h1{
    color: aqua; 
 
 }
+h2{
+   color:rgb(234, 41, 224)
+}
+ul{
+   color:rgb(133, 204, 230)
+}
+body {
+   background-color: rgb(66, 24, 105);
+}
+p{
+   color:rgb(124, 241, 202)
+}
+p{
+   font-size: x-large;
+}
+ul{
+   font-size: large;
+}
